--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "boost-arena-multiplayer",
   "version": "1.0.0",
-  "description": "Multiplayer Boost Arena game with real-time networking",
+  "description": "Multiplayer Blitz Ball game with real-time networking",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.7.4",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
@@ -20,9 +20,11 @@
   "keywords": [
     "multiplayer",
     "game",
-    "websockets",
-    "realtime"
+    "socket.io",
+    "real-time",
+    "nodejs",
+    "javascript"
   ],
-  "author": "Boost Arena Team",
+  "author": "Blitz Ball Team",
   "license": "MIT"
 }
